crates/tui/tests/storybook/snapshots/app_dialog_permission::read_file_long_path_permission_dialog_wraps.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 580
expression: frame.text()
---
* read_file /tmp/smelt-storybook-nonexistent-session-93e4220e873c5539
            8e6e22ff065d617e27efc1a9b326032e323d00a522764901/plans/20
            260618-083946-virtual-transcript-performance/plan.md:1-80
  0 lines

──────────────────────────────────────────────────────────────────────
 read_file: /tmp/smelt-storybook-nonexistent-session-93e4220e873c553
            8e6e22ff065d617e27efc1a9b326032e323d00a522764901/plans/2
            260618-083946-virtual-transcript-performance/plan.md:1-8

 Allow?
  1. allow once
  2. deny
  3. allow read_file for this session
  4. allow read_file in ~/cwd

  press tab to add a reason…
 ○ normal  permission pending                                   1:1 0%
