crates/tui/tests/storybook/snapshots/app_dialog_permission::read_file_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* read_file crates/tui/src/app.rs:120-159                    14:37:03
  0 lines





──────────────────────────────────────────────────────────────────────
 read_file: crates/tui/src/app.rs:120-159

 Allow?
  1. allow once
  2. deny
  3. allow read_file for this session
  4. allow read_file in ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
