crates/tui/tests/storybook/snapshots/app_dialog_permission::stop_process_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* stop_process 4242






──────────────────────────────────────────────────────────────────────
 stop_process: 4242

 Allow?
  1. allow once
  2. deny
  3. allow stop_process for this session
  4. allow stop_process in ~/cwd

  press tab to add a reason…
 ○ normal  permission pending                                   1:1 0%
