crates/tui/tests/storybook/snapshots/app_dialog_permission::web_fetch_permission_dialog_no_preview.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* web_fetch https://example.com/page






──────────────────────────────────────────────────────────────────────
 web_fetch: https://example.com/page

 Allow?
  1. allow once
  2. deny
  3. allow example.com for this session
  4. allow example.com in ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
