crates/tui/tests/storybook/snapshots/app_dialog_permission::web_fetch_permission_dialog_no_preview.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 345
expression: frame.styles_text()
---
dim: 70 18
  7   0  70 fg=AnsiValue(208)
  8   1   9 fg=AnsiValue(208)
 10   1   6 attrs=dim
 11   0   1 bg=AnsiValue(237)
 11   1   1 fg=Black bg=White
 11   2   3 bg=AnsiValue(237) attrs=dim
 11   5   3 fg=AnsiValue(208) bg=AnsiValue(237)
 11   8  62 bg=AnsiValue(237)
 12   1   4 attrs=dim
 13   1   4 attrs=dim
 14   1   4 attrs=dim
 16   2  26 attrs=dim
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(233)
 17  10  60 bg=AnsiValue(233)
